# made

./: .babelrc  .eslintrc.json  .gitignore  .mocharc.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  AGENTS.md  MANIFEST.in  README.md  constants.json  generate_new_fixtures.py  index.html  mat3ra_made-0.1.dev1+g1e1edfef3-py3-none-any.whl  mat3ra_made-0.1.dev1+g290c93fed-py3-none-any.whl  mat3ra_made-0.1.dev1+g3662f70-py3-none-any.whl  mat3ra_made-0.1.dev1+g5326929-py3-none-any.whl  mat3ra_made-0.1.dev1+g5e92152-py3-none-any.whl  mat3ra_made-0.1.dev1+g9469cd4d8-py3-none-any.whl  mat3ra_made-0.1.dev1+gc4e8849-py3-none-any.whl  mat3ra_made-0.1.dev1+gcf48fd4-py3-none-any.whl  mat3ra_made-0.1.dev1+ge64d360b8-py3-none-any.whl  mat3ra_made-0.1.dev1+gec647bc-py3-none-any.whl  mat3ra_made-0.1.dev1+gfa283681b-py3-none-any.whl  nist_categorization_presentation.md  package-lock.json  package.json  postinstall.sh  pyproject.toml  tsconfig.json  wheel_server.py
.cursor/rules/: python-imports.mdc
.github/: copilot-instructions.md
.github/workflows/: build-wheel.yml  cicd.yml
.husky/: pre-commit
data/: constants.json  reciprocal_paths.json
lib/: codemirrorApi.d.ts  codemirrorApi.js  codemirrorApi.js.map  constants.js  constants.js.map  made.d.ts  made.js  made.js.map  material.d.ts  material.js  material.js.map  math.d.ts  math.js  math.js.map  types.d.ts
lib/abstract/: array_with_ids.js  array_with_ids.js.map  scalar_with_id.js  scalar_with_id.js.map
lib/basis/: basis.d.ts  basis.js  basis.js.map  constrained_basis.js  constrained_basis.js.map  types.d.ts  types.js.map
lib/cell/: cell.js  cell.js.map  conventional_cell.d.ts  conventional_cell.js  conventional_cell.js.map  primitive_cell.js  primitive_cell.js.map
lib/constraints/: constraints.d.ts  constraints.js  constraints.js.map
lib/lattice/: lattice.d.ts  lattice.js  lattice.js.map  lattice_bravais.js  lattice_bravais.js.map  lattice_vectors.js  lattice_vectors.js.map  (+5 more)
scripts/: generate-mixins.ts
src/: codemirrorApi.ts  constants.js  default_material.js  made.js  made.spec.js  material.js  material.tests.js  material.ts  math.js  primitive.js  types.ts
tests/: basis.tests.js  enums.js  made.spec.js  material.test.js  material.tests.js  setup.js  utils.js  xyz_combinatorial_basis.tests.js
(+677 files in other folders)
